--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,6 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 
-    // https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api
-    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
-
-    // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet-core
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.27'
-
+    compile 'org.jboss.resteasy:resteasy-jaxrs:3.0.17.Final'
 }
 
